--- a/www/www.csproj
+++ b/www/www.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <TypeScriptToolsVersion>3.4</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Data\Clients\One\_script\ClientOne.ts" />
     <None Remove="Data\Clients\Two\_script\ClientTwo.ts" />
+    <None Remove="Data\_script\app.module.ts" />
     <None Remove="Data\_script\main.ts" />
   </ItemGroup>
 
@@ -29,6 +30,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="Data\Clients\One\_script\ClientOne.ts" />
     <TypeScriptCompile Include="Data\Clients\Two\_script\ClientTwo.ts" />
+    <TypeScriptCompile Include="Data\_script\app.module.ts" />
     <TypeScriptCompile Include="Data\_script\main.ts" />
   </ItemGroup>
 
