--- a/www/www.csproj
+++ b/www/www.csproj
@@ -7,19 +7,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\_images\**" />
+    <Compile Remove="Data\_script\**" />
+    <Content Remove="Data\_images\**" />
+    <Content Remove="Data\_script\**" />
+    <EmbeddedResource Remove="Data\_images\**" />
+    <EmbeddedResource Remove="Data\_script\**" />
+    <None Remove="Data\_images\**" />
+    <None Remove="Data\_script\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BundlerMinifier.Core" Version="2.9.406" />
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="MySql.Data" Version="8.0.16" />
     <PackageReference Include="Nancy" Version="2.0.0" />
     <PackageReference Include="Nancy.Authentication.JWTBearer" Version="1.1.1" />
+    <PackageReference Include="RazorLight" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Content\" />
-    <Folder Include="Data\_images\" />
-    <Folder Include="Data\_script\" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
