gRPC and cleanup

--- a/www/www.csproj
+++ b/www/www.csproj
@@ -23,7 +23,6 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.SQS" Version="3.3.100.39" />
-    <PackageReference Include="BundlerMinifier.Core" Version="2.9.406" />
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="JWT" Version="5.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -33,6 +32,7 @@
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="MySql.Data" Version="8.0.16" />
     <PackageReference Include="Nancy" Version="2.0.0" />
+    <PackageReference Include="NUglify" Version="1.5.13" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,6 +41,10 @@
 
   <ItemGroup>
     <None Include="_views\PostData.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GRPC_Protos\GRPC_Protos.csproj" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
